--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
       quality: 10,
       width: window.innerWidth,
       height: window.innerHeight,
-      workerScript: 'https://cdn.jsdelivr.net/npm/gif.js.optimized/dist/gif.worker.js' // добавлено!
+      workerScript: './gif.worker.js' // добавлено!
     });
   
     gif.on('error', function(err) {
