--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
   </style>
 </head>
 <body>
+  <div id="capture-area">
+
   <h1 id="pageTitle">Уничтожь Кринж</h1>
   <textarea id="cringeText" placeholder="Вставь сюда кринжовый текст..." rows="4"></textarea>
   <input type="url" id="cringeLink" placeholder="...или вставь ссылку">
@@ -642,6 +644,6 @@
 
 
   </script>
-
+</div>
 </body>
 </html>
