Fix input reset bug

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
       newInput.accept = 'image/*';
       newInput.className = oldInput.className;
       oldInput.replaceWith(newInput);
+      imageInput = newInput;
 
     
       setTimeout(() => {
