Validate links and secure anchors

--- a/index.html
+++ b/index.html
@@ -341,10 +341,15 @@
         el = document.createElement('div');
         el.textContent = text;
       } else if (link) {
+        if (!/^https?:\/\//i.test(link)) {
+          alert('Некорректная ссылка! Укажите ссылку с http:// или https://');
+          return;
+        }
         el = document.createElement('a');
         el.href = link;
         el.textContent = link;
         el.target = '_blank';
+        el.rel = 'noopener noreferrer';
       } else if (hasImage) {
         const file = imageInput.files[0]; // сохраняем до замены поля
         const reader = new FileReader();
